fix blog heading size on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17306,7 +17306,7 @@ button.bg-blue:focus {
     font-weight: 700;
     font-variation-settings: "wght" 700;
     color: var(--hiContrast);
-    font-size: 48px;
+    font-size: 30px;
     letter-spacing: -.04em;
     line-height: 1.25;
   }
@@ -17318,6 +17318,28 @@ button.bg-blue:focus {
     /* fixed header height*/
     margin: -60px 0 0;
     /* negative fixed header height */
+  }
+
+  @media (min-width: 800px) {
+    .article h1 {
+      font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
+      text-rendering: optimizeLegibility;
+      font-weight: 700;
+      font-variation-settings: "wght" 700;
+      color: var(--hiContrast);
+      font-size: 48px;
+      letter-spacing: -.04em;
+      line-height: 1.25;
+    }
+  
+    .article h1::before {
+      content: "";
+      display: block;
+      height: 60px;
+      /* fixed header height*/
+      margin: -60px 0 0;
+      /* negative fixed header height */
+    }
   }
 
   .article h2 {
@@ -17338,6 +17360,28 @@ button.bg-blue:focus {
     /* fixed header height*/
     margin: -40px 0 0;
     /* negative fixed header height */
+  }
+
+  @media (min-width: 800px) {
+  .article h2 {
+    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
+    margin-top: 3.5rem;
+    margin-bottom: .75rem;
+    font-weight: 600;
+    font-variation-settings: "wght" 680;
+    font-size: 26px;
+    color: var(--hiContrast);
+    line-height: 1.2;
+  }
+
+  .article h2::before {
+    content: "";
+    display: block;
+    height: 40px;
+    /* fixed header height*/
+    margin: -40px 0 0;
+    /* negative fixed header height */
+  }
   }
 
   .article h3 {
